remove z-index: -1 in the home page, it prevented to click the button

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -122,7 +122,7 @@
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        background: #f5f5f5;
+        background: #ccabf2;
       }
     }
   }
